History of this buildout
========================

5.1.14 (unreleased)
-------------------

- Move redundant top level folders into an unpublished folder.
  [coen]

- Add migrate step to move content to theme folders and subfolders
  [coen]

- Install plone.api
- Add CT Theme
- Add Creation migration of themes
- Add event subscriber to create theme sub folders
- Sort versions.cfg
  [coen]

- Remove portal tabs submenu on hover. HTML and JS.
  [coen]

- Remove MinaraadConfigletView. Used to CRUD themes.
  [coen]

- Add CT theme (folder)
  [coen]

- Rename werkveld > theme
  [coen]

- Add minaraad theme to project.
  [coen]

- Add upgrade step
- Remove portal action 'Mijn abonnementen'
- Remove configlet 'subscribers overview'
  [coen]

- Removed built-in newsletter functionality in favor of mailchimp
  [diederik]

- Pinned slightly newer AccessControl to get rid of starup errors.
  [coen]

- Create upgrade notes for upgrade to Plone 3.4.6.
  [coen]

- Merge minaraad.theme to src dir. All is now in one repository.
  [coen]

- Removed LinkedIn portlet.
  The portlet is also removed from the live site. No upgradestep needed.
  [coen]

- Updated pinnings to Plone 4.3.6
  [coen]

- Cleaned up the code: pyflakes, pep8, trailing white space.
  [maurits]

- Moved to git.  Temporary repo:
  git@bitbucket.org:zestsoftware/minaraad.git
  [maurits]


5.1.13 (2015-12-08)
-------------------

- Products.PloneHotfix20151208 1.0
  [maurits]


5.1.12 (2015-12-08)
-------------------

- Products.PloneHotfix20151208 1.1
  [maurits]


5.1.11 (2015-11-20)
-------------------

- Added ipdb.
  [maurits]

- Updated iPython.
  [maurits]


5.1.10 (2015-09-18)
-------------------

- Added UBUNTU-1404.rst with instructions on how to update the
  servers.
  [maurits]

- Updated several minor versions.
  [maurits]


5.1.9 (2015-09-10)
------------------

- Products.PloneHotfix20150910 1.1
  [maurits]


5.1.8 (2015-06-02)
------------------
